--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "dotenv": "^16.0.3",
     "firebase-admin": "^11.5.0",
     "moment": "^2.29.4",
     "octokit": "^2.0.14",
