--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "dotenv": "^16.0.3",
     "firebase-admin": "^11.5.0",
+    "helmet": "^6.0.1",
     "moment": "^2.29.4",
     "octokit": "^2.0.14",
     "reflect-metadata": "^0.1.13",
