--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "helmet": "^6.0.1",
     "moment": "^2.29.4",
     "octokit": "^2.0.14",
+    "passport": "^0.6.0",
+    "passport-firebase-jwt": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
